--- a/index.html
+++ b/index.html
@@ -45,10 +45,18 @@
                         <h2>Travel the world with us</h2>
                     </div>
                     <div class="in">
-                        <p>form</p>
-                        <input type="text">
-                        <p>to</p>
-                        <input type=" text">
+                        <div>
+                            <p>form</p>
+                        </div>
+                        <div>
+                            <input type="text">
+                        </div>
+                        <div class="div">
+                            <p>to</p>
+                        </div>
+                        <div>
+                            <input type=" text">
+                        </div>
                     </div>
                     <div class="btn">
 
