--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
                     </div>
                     <div class="in">
                         <div>
-                            <p>form</p>
+                            <p>from</p>
                         </div>
                         <div>
-                            <input type="text">
+                            <input type="text" class="t_txt">
                         </div>
                         <div class="div">
                             <p>to</p>
                         </div>
                         <div>
-                            <input type=" text">
+                            <input type=" text" class="t_txt">
                         </div>
                     </div>
                     <div class="btn">
